<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include
        android:id="@+id/include_h"
        layout="@layout/header" />

    <include
        android:id="@+id/include_f"
        layout="@layout/footer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelNomListe"
        android:id="@+id/textView"

        android:gravity="center|center_vertical"
        android:layout_alignBottom="@+id/editTextNomListe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextNomListe" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/editTextNomListe"
        android:layout_below="@+id/include_h"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:textSize="14sp"
        android:background="@drawable/edittext_custom"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelListComp"
        android:id="@+id/textViewPlus"
        android:layout_above="@+id/listViewCompPlus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imageButtonAjoutCompPlus"
        android:gravity="center|center_vertical"
        android:textSize="14sp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewCompPlus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/include_f"
        android:layout_below="@+id/imageButtonAjoutCompPlus" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonAjoutCompPlus"
        android:background="@drawable/ajouter_bleu"
        android:layout_below="@+id/editTextChampVide"
        android:layout_toRightOf="@+id/textViewPlus"
        android:layout_toEndOf="@+id/textViewPlus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextChampVide"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/champvide"
        android:textSize="12sp"
        android:textColor="@color/border_red"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quantite"
        android:id="@+id/textViewQuantite"
        android:layout_above="@+id/listViewCompPlus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp" />


</RelativeLayout>
