<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RelativeLayoutPrix">

    <include
        android:id="@+id/include_h"
        layout="@layout/header" />

    <include
        android:id="@+id/include_f"
        layout="@layout/footer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeur"
        android:id="@+id/textViewDetVal"
        android:gravity="center|center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editTextVal"
        android:layout_above="@+id/textViewChpVideVal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editTextVal"
        android:layout_below="@+id/include_h"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:background="@drawable/edittext_custom"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mag"
        android:id="@+id/textView6"
        android:gravity="center|center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textViewChpVideMag"
        android:layout_below="@+id/textViewChpVideVal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editTextMag"
        android:background="@drawable/edittext_custom"
        android:layout_below="@+id/textViewChpVideVal"
        android:layout_toRightOf="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/champvide"
        android:id="@+id/textViewChpVideVal"
        android:textColor="@color/border_red"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/editTextVal"
        android:layout_alignLeft="@+id/editTextVal"
        android:layout_alignStart="@+id/editTextVal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/champvide"
        android:id="@+id/textViewChpVideMag"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/border_red"
        android:layout_below="@+id/editTextMag"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

</RelativeLayout>